# diffguard

./: .diffguard.toml  .gitignore  LICENSE  README.md  pyproject.toml
src/diffguard/: __init__.py  baseline.py  baseline_cli.py  cli.py  config.py  context.py  exceptions.py  exclusions.py  git.py  pipeline.py  severity.py  severity_map.py
src/diffguard/ast/: __init__.py  astro.py  elixir.py  go.py  java.py  javascript.py  languages.py  parser.py  php.py  python.py  ruby.py  scope.py  svelte.py  typescript.py  vue.py
src/diffguard/llm/: __init__.py  analyzer.py  client.py  prompts.py  response.py  tokens.py
src/diffguard/output/: __init__.py  json_report.py  terminal.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_ast_parser.py  test_astro.py  test_baseline.py  test_baseline_cli.py  test_cli.py  test_cli_flags.py  test_config.py  test_context.py  test_css.py  test_elixir.py  test_elixir_frameworks.py  test_exclusions.py  test_exit_codes.py  test_fingerprint.py  test_git.py  test_go.py  test_html.py  test_java.py  test_javascript.py  test_json_output.py  test_laravel.py  test_llm_client.py  test_php.py  test_pipeline.py  test_progress.py  test_prompts.py  test_python_frameworks.py  test_response.py  test_ruby.py  test_ruby_frameworks.py  test_scope.py  test_severity.py  test_severity_map.py  test_svelte.py  test_symbols.py  test_terminal_output.py  test_tokens.py  (+3 more)
tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_errors.py  test_fixtures.py  test_full_workflow.py  test_languages.py
